
	* NCO 5.2.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0: Fast Car';git push
	git tag -a 5.2.0-beta01 -m 'all: cf lsy mtd; ncclimo: tms inp_aut, fix inp_glb, fix djf-mode clm_bnd; ncclimo/ncremap: dpr cheyenne+ALCF mch, spp derecho, upd perlmutter; ncks: --chk_bnd, S1D works; ncremap: TR --mono*, ncoidw, MWF alg_lst, trfv2';git push --tags

	* ncremap change alg_lst from space-separated to comma-separated

	* nco.texi document chk_bnd, S1D, --alg_lst

2024-02-15  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-beta01: Kansas City';git push
	git tag -a 5.2.0-beta01 -m 'all: cf lsy mtd; ncclimo: tms inp_aut, fix inp_glb, fix djf-mode clm_bnd; ncclimo/ncremap: dpr cheyenne+ALCF mch, spp derecho, upd perlmutter; ncks: --chk_bnd, S1D works; ncremap: TR --mono*, ncoidw, MWF alg_lst, trfv2';git push --tags

	* S1D add levlak and levgrnd coordinates from elmv3_r05l15.nc

	* S1D add topounit support

2024-02-14  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha06: Be My Valentine';git push
	git tag -a 5.2.0-alpha06 -m 'ncks: S1D works';git push --tags

	* S1D skip unpacking empty variables. Now works on up-to-date ELM IG restarts.

	* S1D appears to work well for most variables. Remaining issues	include: icol_crop_noncompete, icol_urban_*

2024-02-13  Charlie Zender  <zender@uci.edu>

	* S1D implement new has_mec determination algorithm

	* S1D Value must not equal zero or missing value when determining landunit type

	* NCO 5.2.0-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha05: Sandflower';git push
	git tag -a 5.2.0-alpha05 -m 'ncks: s1d dmn rdr, mec, vrt, mss_val';git push --tags

	* S1D initialize all output fields to missing value

2024-02-07  Charlie Zender  <zender@uci.edu>

	* S1D now defines MEC and MRV dimensions correctly
